# splunkology

./: .coverage  .dockerignore  .env.example  .gitignore  .mcp.TEST-002.json  .mcp.json  .pre-commit-config.yaml  AGENTS.md  CLAUDE-TEST-002.md  Dockerfile  LICENSE  LIMITATIONS.md  Makefile  README.md  ROADMAP.md  T14_v2_handoff.md  index.html  pyproject.toml  requirements-dev.txt  requirements.txt  sbom.cyclonedx.json  sbom.spdx.json  siftguard_dashboard_t14.html
.codex/: config.toml
.github/workflows/: ci.yml  release.yml
docs/: COMPLIANCE.md  DEPENDENCIES.md  EVAL_FRAMEWORK.md  LIMITATIONS.md  RELEASE_NOTES.md  THREAT_MODEL.md  TOOL_CATALOG.md
docs/adr/: ADR-001-empirical-evaluation-framework.md  ADR-002-trace-data-model.md  ADR-003-loop-instrumentation.md  ADR-005-analytics-module-design.md  ADR-006-multi-orchestrator-vendor-lockin.md  ADR-007-spoliation-moat.md  ADR-007-tamper-evident-audit-log.md  ADR-008-canonical-case-loader.md  ADR-009-scorer-audit-db.md  README.md
docs/architecture/: README.md
docs/audit_logs/: sample_run.json
docs/devpost/: SUBMISSION.md  loom_script.md
docs/evaluation/: bots_v3_citation_table.md  verdict-verified.json
docs/results/: T125_delta.md  T13_delta.md
docs/reviews/: codex_architecture.md  codex_gpt55_deep_consolidated_review.md  codex_narrative.md  codex_test_gaps.md  gemini_adr_pushback.md  gemini_system_risk.md  siftguard_master_review.md
experiments/: run.py
experiments/configs/: ablation_no_correlation.json  ablation_no_self_correction.json  ablation_v1_baseline.json  baseline.json  baseline_claudecode.json  baseline_langgraph.json  iter_sweep_1.json  iter_sweep_10.json  iter_sweep_3.json  iter_sweep_5.json
experiments/ground_truth/: SCHEMA-v1.1.0.md  TEST-001-v1.1.0.json  TEST-002-v1.1.0.json  TEST-003-v1.1.0.json
experiments/results/: T13_delta.md
migrations/: 001_eval_framework_schema.sql  002_run_id.sql  003_blocked_mutation.sql
scripts/: apply_t14.py  check_methodology.py  cold_clone_test.sh  generate_tool_catalog.py  inspect_experiment_coverage.py  migrate.py  run_live_case.py  score_test002.py  seed_blocked_mutation_receipts.py  seed_spoliation_receipts.py  t13_score_all.py
tests/: test_dashboard_verdict_render.py  test_mcp_attempt_error_path.py  test_mcp_hang_recovery.py  test_mcp_routing.py  test_openai_verdict_none_guard.py  test_readme_hero.py  test_submission_md.py  test_v1_fallback_emits_verdict.py
tests/agent/: test_output_schema.py  test_output_schema_verdict_objects.py
tests/benchmark/: runner.py  scorer.py  test_f1_baseline.py
tests/ci/: test_workflow_exists.py
tests/dashboard/: test_orchestrator_comparison.py
tests/docs/: test_adr_index.py  test_limitations.py  test_threat_model.py
tests/eval/: test_checkpoint_scorer.py  (+12 more)
(+351 files in other folders)
